--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
       background: linear-gradient(to bottom right, #ffc0cb, #ffe4e1);
       display: flex;
       justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
+      align-items: flex-start;
+      min-height: 100vh;
+      overflow-y: auto;
+      padding: 20px;
     }
 
     .container {
@@ -28,10 +29,11 @@
       text-align: center;
       box-shadow: 0 10px 30px rgba(0, 0, 0, 0.2);
       max-width: 600px;
-      width: 90%;
+      width: 100%;
       animation: fadeIn 1s ease;
       position: relative;
       z-index: 1;
+      margin: 40px auto;
     }
 
     h1 {
@@ -92,7 +94,6 @@
       to { opacity: 1; transform: scale(1); }
     }
 
-    /* ❤️ Corazones flotando */
     .heart {
       position: absolute;
       width: 20px;
@@ -135,7 +136,6 @@
       }
     }
 
-    /* 📱 Diseño responsive */
     @media (max-width: 480px) {
       .container {
         padding: 20px;
@@ -184,7 +184,7 @@
     Tu navegador no soporta audio HTML5.
   </audio>
 
-  <!-- Pantalla 1: Ingreso de nombre -->
+  <!-- Pantalla 1 -->
   <div class="container" id="pantalla-nombre">
     <h1>Holis 💕</h1>
     <p>Antes de seguir ¿Cómo ute c llama? 😠</p>
@@ -193,7 +193,7 @@
     <button onclick="mostrarMensaje()">Continuar</button>
   </div>
 
-  <!-- Pantalla 2: Mensaje romántico -->
+  <!-- Pantalla 2 -->
   <div class="container hidden" id="pantalla-mensaje">
     <h1>¿Quieres ser mi novia? 💖</h1>
     <img src="hello-kitty.gif" alt="Gif decorativo" style="max-width: 100px; border-radius: 15px; margin-bottom: 10px;" />
@@ -201,7 +201,7 @@
     <button onclick="mostrarFinal()">Sí, quiero ❤️</button>
   </div>
 
-  <!-- Pantalla 3: Final con gif y fotos -->
+  <!-- Pantalla 3 -->
   <div class="container hidden" id="pantalla-final">
     <div class="final">
       <h1>sabía q dirías q sí 💘</h1>
@@ -210,7 +210,7 @@
     </div>
   </div>
 
-  <!-- 💗 Corazones flotando -->
+  <!-- Corazones flotando -->
   <div id="corazones" class="hidden"></div>
 
   <script>
@@ -245,6 +245,11 @@
       document.getElementById("pantalla-mensaje").classList.add("hidden");
       document.getElementById("pantalla-final").classList.remove("hidden");
       document.getElementById("corazones").classList.add("hidden");
+
+      // 💥 Vibración si es compatible
+      if (navigator.vibrate) {
+        navigator.vibrate([300, 100, 300]);
+      }
     }
 
     function generarCorazones() {
